--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,64 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.studentView{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
+.checkBox{
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.remove{
+  height: 50%;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.inputContainer{
+  display: flex;
+  flex-direction: row;
+}
+
+.textInput{
+  height: 50%;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 10px;
+}
+
+.numberInput{
+  height: 50%;
+  width: 30px;
+  margin-left: 10px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.container{
+  padding-left: 5%;
+  padding-bottom: 5%;
+  padding-right: 5%;
+}
+
+.form{
+  border: black;
+  border-style:dotted;
+  padding-left: 5%;
+  padding-bottom: 5%;
+  width: fit-content;
+  padding-right: 5%;
+}
+
+#list{
+  border: black;
+  border-style:dotted;
+  padding-left: 5%;
+  padding-bottom: 5%;
+  width: fit-content;
+  padding-right: 5%;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
